--- a/gamedata/configs/items/settings/new_game_loadouts.ltx
+++ b/gamedata/configs/items/settings/new_game_loadouts.ltx
@@ -131,7 +131,7 @@ brewed_coffee = true,2,85
 ration_ukr = true,1,200,2
 vodka = true,3,150
 cigarettes_russian = true,2,30
-cocaine = true,1,75
+cocaine = true,1,375
 drug_booster = true,1,250           
 
 detector_geiger = true,1,200
@@ -205,6 +205,18 @@ wpn_aps	= true,1,200
 wpn_colt1911 = true,1,200
 wpn_pm_custom = true,1,125
 
+cooking = true,1,25
+yadylin = true,2,50
+drug_sleepingpills = true,2,75
+antirad_cstamine = true,2,50
+antirad_kalium = true,3,175
+medkit = true,3,150
+brewed_coffee = true,2,85
+ration_ukr = true,1,200
+vodka = true,2,150
+cigarettes_russian = true,4,30
+drug_booster = true,1,250  
+
 ammo_9x18_ap = true,3,85
 
 dolg_novice_outfit = true,1,50
@@ -235,9 +247,19 @@ ammo_9x19_ap = true,3,110
 svoboda_novice_outfit = true,1,50
 nbc_freedom_outfit = true,1,650
 
+yadylin = true,2,50
+drug_sleepingpills = true,2,75
+antirad_cstamine = true,2,50
+antirad_kalium = true,3,175
+medkit = true,3,150
+joint = true,4,90
 marijuana = true,2,50
-cocaine = true,1,75
-stimpack_army = true,2,25
+brewed_coffee = true,2,85
+ration_ukr = true,1,200,2
+vodka = true,3,150
+cigarettes_russian = true,2,30
+cocaine = true,1,375
+drug_booster = true,1,250
 
 [killer_loadout]:shared
 killer_patch = false,1,0
@@ -258,6 +280,19 @@ wpn_beretta_modern = true,1,200
 wpn_fn57 = true,1,325
 
 ammo_9x19_ap = true,3,110
+
+yadylin = true,2,50
+drug_sleepingpills = true,2,75
+antirad_cstamine = true,2,50
+antirad_kalium = true,3,175
+medkit = true,3,150
+joint = true,4,90
+marijuana = true,2,50
+brewed_coffee = true,2,85
+ration_ukr = true,1,200,2
+vodka = true,3,150
+cigarettes_russian = true,2,30
+drug_booster = true,1,250
 
 merc_fighter_outfit = true,1,50
 merc_wolven_outfit = true,1,600
@@ -283,11 +318,21 @@ wpn_aps = true,1,200
 wpn_colt1911 = true,1,200
 wpn_pm_custom = true,1,125
 
+yadylin = true,2,50
+drug_sleepingpills = true,2,75
+antirad_cstamine = true,2,50
+antirad_kalium = true,3,175
+medkit = true,3,150
+stimpack_army = true,1,300
+brewed_coffee = true,3,85
+ration_ukr = true,1,200
+vodka = true,2,150
+cigarettes_russian = true,2,30
+drug_booster = true,1,250
+
 ammo_9x18_pmm = true,3,50
 
 army_outfit = true,1,50
-
-ration_ukr = true,1,100
 
 
 [monolith_loadout]:shared
@@ -311,6 +356,23 @@ wpn_pm_custom = true,1,125
 wpn_beretta_modern = true,1,200
 
 ammo_9x39_pab9 = true,3,120
+
+cooking = true,1,25
+yadylin = true,2,50
+morphine = true,1,150
+drug_sleepingpills = true,2,75
+glucose_s = true,2,75
+drug_radioprotector = true,2,150
+antirad = true,2,200
+antirad_kalium = true,3,175
+medkit = true,4,150
+medkit_scientific = true,2,350
+stimpack_scientic = true,2,500
+jgut = true,3,75
+akvatab = true,3,150
+brewed_coffee = true,2,85
+ration_ukr = true,1,200,2
+vodka = true,3,120
 
 monolith_outfit = true,1,50
 monolith_trenchcoat_outfit = true,1,400
@@ -339,6 +401,23 @@ wpn_fn57 = true,1,325
 ammo_9x19_pbp = true,3,60
 ammo_357_hp_mag = true,3,60
 
+cooking = true,1,25
+yadylin = true,2,50
+morphine = true,1,150
+drug_sleepingpills = true,2,75
+glucose_s = true,2,75
+drug_radioprotector = true,2,150
+antirad = true,2,200
+antirad_kalium = true,3,175
+medkit = true,4,150
+medkit_scientific = true,2,350
+stimpack_scientic = true,2,500
+jgut = true,3,75
+akvatab = true,3,150
+brewed_coffee = true,2,85
+ration_ukr = true,1,200,2
+vodka = true,3,120
+
 cs_novice_outfit = true,1,50
 cs_light_outfit = true,1,500
 
@@ -362,6 +441,20 @@ wpn_toz106_m1 = true,1,375
 wpn_aps = true,1,200
 wpn_colt1911 = true,1,200
 wpn_pm_custom = true,1,125
+
+cooking = true,1,25
+yadylin = true,2,50
+drug_sleepingpills = true,2,75
+antirad_cstamine = true,2,50
+antirad_kalium = true,3,175
+medkit = true,3,150
+joint = true,4,90
+brewed_coffee = true,2,85
+ration_ukr = true,1,200,2
+vodka = true,3,150
+cigarettes_russian = true,2,30
+cocaine = true,1,375
+drug_booster = true,1,250
 
 ammo_9x18_ap = true,3,85
 
@@ -388,6 +481,20 @@ wpn_aps = true,1,200
 wpn_colt1911 = true,1,200
 wpn_pm_custom = true,1,125
 
+cooking = true,1,25
+yadylin = true,2,50
+drug_sleepingpills = true,2,75
+antirad_cstamine = true,2,50
+antirad_kalium = true,3,175
+medkit = true,3,150
+joint = true,4,90
+brewed_coffee = true,2,85
+ration_ukr = true,1,200,2
+vodka = true,3,150
+cigarettes_russian = true,2,30
+cocaine = true,1,375
+drug_booster = true,1,250
+
 ammo_23x75_barrikada = true,3,150
 
 greh_trenchcoat_outfit = true,1,50
@@ -409,6 +516,19 @@ wpn_pl15 = true,1,225
 wpn_vz61 = true,1,325
 wpn_fnp45 = true,1,225
 wpn_fn57 = true,1,325
+
+yadylin = true,2,50
+drug_sleepingpills = true,2,75
+antirad_cstamine = true,2,50
+antirad_kalium = true,3,175
+medkit = true,3,150
+joint = true,4,90
+marijuana = true,2,50
+brewed_coffee = true,2,85
+ration_ukr = true,1,200,2
+vodka = true,3,150
+cigarettes_russian = true,2,30
+drug_booster = true,1,250
 
 ammo_9x19_fmj = true,2,25
 ammo_9x18_fmj = true,2,25
