--- a/gamedata/configs/items/settings/new_game_loadouts.ltx
+++ b/gamedata/configs/items/settings/new_game_loadouts.ltx
@@ -188,7 +188,7 @@ vodka = true,3,120
 [dolg_loadout]:shared
 dolg_patch = false,1,0
 wpn_knife2 = false,1,0
-wpn_device_pda_1 = false,1,0
+device_pda_1 = false,1,0
 itm_backpack = false,1,0
 
 helm_cloth_mask = true,1,5
@@ -225,27 +225,28 @@ nbc_dolg_outfit = true,1,650
 [freedom_loadout]:shared
 freedom_patch = false,1,0
 wpn_knife1 = false,1,0
-wpn_device_pda_1 = false,1,0
+device_pda_1 = false,1,0
 itm_backpack = false,1,0
 
 helm_cloth_mask = true,1,5
 helm_resp = true,1,50       
 helm_respirator_old = true,1,50
 
-wpn_k98 = true,1,1050
+wpn_l85_m2 = true,1,1350,1
+wpn_adar2_15 = true,1,1050
+wpn_k98 = true,1,950
 wpn_mp5 = true,1,500
 wpn_vz61 = true,1,375
-wpn_bm16 = true,1,550,2
+wpn_wincheaster1300 = true,1,550,2
 wpn_toz106_m1 = true,1,375
-wpn_usp = true,1,250
+wpn_beretta_modern = true,1,250
 
-wpn_beretta_modern = true,1,200
-wpn_glock_modern = true,1,300
-
-ammo_9x19_ap = true,3,110
+detector_geiger = true,1,200
+detector_radio = true,1,200
+detector_simple = true,1,200
 
 svoboda_novice_outfit = true,1,50
-nbc_freedom_outfit = true,1,650
+svoboda_light_outfit = true,1,650
 
 yadylin = true,2,50
 drug_sleepingpills = true,2,75
