--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_ecolog.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_ecolog.ltx
@@ -9,7 +9,7 @@ extra = extras_novice
 [ecolog_trainee]:ecolog
 primary = ecolog_trainee_primary
 secondary = ecolog_trainee_secondary
-;extra = extras_trainee
+extra = extras_trainee
 
 [ecolog_experienced]:ecolog
 primary = ecolog_experienced_primary
@@ -19,7 +19,7 @@ extra  =  extras_experienced
 [ecolog_professional]:ecolog
 primary = ecolog_professional_primary
 secondary = ecolog_professional_secondary
-;extra = extras_professional
+extra = extras_professional
 
 [ecolog_veteran]:ecolog
 primary = ecolog_veteran_primary
@@ -29,7 +29,7 @@ extra = extras_veteran
 [ecolog_expert]:ecolog
 primary = ecolog_expert_primary
 secondary = ecolog_expert_secondary
-;extra = extras_expert
+extra = extras_expert
 
 [ecolog_master]:ecolog
 primary = ecolog_master_primary
@@ -39,7 +39,7 @@ extra = extras_master
 [ecolog_legend]:ecolog
 primary = ecolog_legend_primary
 secondary = ecolog_legend_secondary
-;extra = extras_legend
+extra = extras_legend
 
 ;----------------------------------------------------
 [ecolog_novice_primary]
