--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_freedom.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_freedom.ltx
@@ -1,338 +1,325 @@
-
+; Done 8/30/24 - [Ted]
 [freedom]:stalker
 
-[freedom_novice]:stalker
+[freedom_novice]:freedom
 primary = freedom_novice_primary
-;secondary = freedom_novice_secondary
+secondary = freedom_novice_secondary
+extra = extras_novice
 
-[freedom_experienced]:stalker
+[freedom_trainee]:freedom
+primary = freedom_trainee_primary
+secondary = freedom_trainee_secondary
+extra = extras_trainee
+
+[freedom_experienced]:freedom
 primary = freedom_experienced_primary
 secondary = freedom_experienced_secondary
+extras = extras_experienced
 
-[freedom_professional]:stalker
+[freedom_professional]:freedom
+primary = freedom_professional_primary
+secondary = freedom_professional_secondary
+extras = extras_professional
 
-[freedom_veteran]:stalker_veteran
+[freedom_expert]:freedom
+primary = freedom_expert_primary
+secondary = freedom_expert_secondary
+extras = extras_expert
+
+[freedom_veteran]:freedom
 primary = freedom_veteran_primary
 secondary = freedom_veteran_secondary
+extras = extras_veteran
 
-[freedom_master]:stalker_master
+[freedom_master]:freedom
 primary = freedom_master_primary
 secondary = freedom_master_secondary
+extras = extras_master
 
-[freedom_trainee]:freedom_novice
-
-[freedom_expert]:freedom_veteran
-
-[freedom_legend]:freedom_master
+[freedom_legend]:freedom
+primary = freedom_legend_primary
+secondary = freedom_legend_secondary
+extras = extras_legend
 
 ;----------------------------------------------------
+
 [freedom_novice_primary]
 
-wpn_ump45:r:0
 wpn_vz61:0:0
-wpn_pp2000:0:0
+wpn_vz61:0:0
+wpn_mp5:r:0
+wpn_mp5:r:0
+wpn_mp5:r:0
 wpn_mp5:r:0
 wpn_mp5sd_custom:r:0
-
-wpn_ump45:r:0
-wpn_vz61:0:0
-wpn_pp2000:0:0
-wpn_mp5:r:0
-wpn_mp5sd_custom:r:0
-
-wpn_ump45:r:0
-wpn_vz61:0:0
-wpn_pp2000:0:0
-wpn_mp5:r:0
-wpn_mp5sd_custom:r:0
-
-wpn_mp133:0:3
-wpn_mp153_m1:0:3
-wpn_wincheaster1300:0:3
-wpn_remington870:0:3
-
-wpn_mp133:0:3
-wpn_mp153_m1:0:3
-wpn_wincheaster1300:0:3
-wpn_remington870:0:3
-wpn_ithacam37_stakeout:0:3
-wpn_ithacam37_trench:0:3:25
-wpn_ithacam37_trench:0:3
 
 wpn_k98:r:0
 wpn_k98:r:0
+wpn_adar2_15:0:0
+wpn_adar2_15:0:0
+wpn_adar2_15:0:0
 
-wpn_ak5c_bas:0:0
-wpn_aug_modern:0:0
-wpn_aug_modern:0:0
-wpn_aug_merc:0:0
-wpn_aug_merc:0:0
-wpn_l85_m2:4:0
-wpn_l85_m2:4:0
-wpn_m4a1_siber:0:0
-wpn_m4_ru556:0:0
-wpn_m4_ru556:0:0
-wpn_sig552:0:0
-wpn_sig552:0:0
-
-wpn_steyr_scout_big:0:0
 wpn_winchester1873:0:0
+wpn_remington870:0:3
+wpn_remington870:0:3
+wpn_toz106_m1:0:3
+wpn_wincheaster1300:0:3
+wpn_wincheaster1300:0:3
+wpn_ithacam37_trench:0:3:25
 
+[freedom_novice_secondary]
+wpn_sig226:r:0
+wpn_walther_p99:0:0
+wpn_walther_p99:0:0
+wpn_beretta_modern:0:0
+wpn_beretta_modern:0:0
+wpn_beretta_modern:0:0
+wpn_fnp45:r:0:5
+
+[freedom_trainee_primary]
+
+wpn_vz61:0:0
+wpn_vz61:0:0
+wpn_mp5:r:0
+wpn_mp5:r:0
+wpn_mp5:r:0
+wpn_mp5sd_custom:r:0
+
+wpn_k98:r:0
+wpn_remington700:r:0
 wpn_adar2_15:0:0
 wpn_adar2_15:0:0
+wpn_adar2_15:0:0
+
+wpn_winchester1873:0:0
+wpn_remington870:0:3
+wpn_remington870:0:3
+wpn_wincheaster1300:0:3
+wpn_wincheaster1300:0:3
+wpn_toz106_m1:0:3
+wpn_ithacam37_trench:0:3:25
+
+[freedom_trainee_secondary]
+
+wpn_sig226:r:0
+wpn_walther_p99:0:0
+wpn_walther_p99:0:0
+wpn_beretta_modern:0:0
+wpn_beretta_modern:0:0
+wpn_beretta_modern:0:0
+wpn_fnp45:r:0:5
+wpn_fnp45:r:0:5
 
 [freedom_experienced_primary]
-wpn_fal_sa58_osw:r:0
-wpn_dvl10:r:0
+
+wpn_ump45:0:0
+wpn_mp5:r:0
+wpn_mp5:r:0
+wpn_mp5:r:0
+wpn_mp5sd_custom:r:0
+
+wpn_k98:r:0
 wpn_remington700:r:0
-wpn_p90gamma:r:3
-
-wpn_ump45:r:0
-
-wpn_m4a1_siber:4:6:10
-wpn_ak5c_bas:4:0
-wpn_ak5c_bas:4:0
-wpn_m4a1_siber:0:0
-wpn_m4a1_siber:0:0
-wpn_m4_ru556:0:0
-wpn_m4_ru556:0:0
-
-wpn_ak5c_bas:0:0
-wpn_ak5c_bas:0:0
-wpn_ak5c_bas:0:0
-wpn_aug_modern:0:0
-wpn_aug_modern:0:0
-wpn_aug_modern:0:0
-wpn_aug_merc:0:0
-wpn_aug_merc:0:0
-wpn_aug_merc:0:0
-wpn_g36ka4_rwap:r:0:25
-wpn_g36ka4_rwap:r:0:25
+wpn_adar2_15:0:0
+wpn_adar2_15:0:0
 wpn_l85_m2:4:0
 wpn_l85_m2:4:0
-wpn_m4a1_siber:0:0
-wpn_m4_ru556:0:0
-wpn_sig550:0:0
-wpn_sig550:0:0
-wpn_sig552:0:0
-wpn_sig552:0:0
 
-wpn_ump45:r:0
-wpn_pp2000:0:0
-wpn_mp5:r:0
-wpn_mp5sd_custom:r:0
-
-wpn_ump45:r:0
-wpn_vz61:0:0
-wpn_pp2000:0:0
-wpn_mp5:r:0
-wpn_mp5sd_custom:r:0
-
-wpn_mp133:0:3
-wpn_mp153_m1:0:3
-wpn_wincheaster1300:0:3
-wpn_remington870:0:3
-wpn_mp153_m1:0:3
-wpn_spas12:0:3:75
-wpn_ithacam37_trench:0:3
-wpn_ithacam37_trench:0:3
-wpn_ithacam37_trench:0:3
-
-wpn_k98:r:0
-wpn_k98:r:0
-wpn_k98_mod:0:0
-wpn_steyr_scout_big:0:0
-wpn_steyr_scout_big:0:0
 wpn_winchester1873:0:0
+wpn_remington870:0:3
+wpn_remington870:0:3
+wpn_wincheaster1300:0:3
+wpn_wincheaster1300:0:3
+wpn_ithacam37_trench:0:3:25
 
 [freedom_experienced_secondary]
-wpn_mp412:0:0
-wpn_mp412:0:0
-wpn_mp412:0:0
-wpn_sig226:0:0
-wpn_sig220_n:0:0
-wpn_glock:0:0
-wpn_glock_modern:0:0:25
-wpn_beretta_modern:0:0
+
+wpn_sig226:r:0
 wpn_walther_p99:0:0
-wpn_walther_p99:0:0
-wpn_colt1911:0:0
-wpn_colt1911_camo:0:0
-wpn_colt1911:0:0
 wpn_beretta_modern:0:0
-wpn_beretta_modern:0:0
-wpn_mp443:0:0
-wpn_usp_match:0:0
 wpn_fnp45:r:0:5
-wpn_usp:r:0:5
-wpn_usp:r:0:5
-wpn_usp:r:0:5
 
-[freedom_veteran_primary]
-wpn_fn2000_nimble:r:6:25
-wpn_ace52:r:3
-wpn_mp5_nimble:r:0:70
-wpn_m4_ru556:4:6:3
-wpn_ump45:r:0
-wpn_l96a1m:r:0:10
-wpn_steyr_scout_big:r:3
-wpn_steyr_scout_big:r:3
+[freedom_professional_primary]
 
-wpn_fal_sa58_osw:r:0
-wpn_fal_sa58_osw:r:0
-wpn_fal_sa58_osw:r:0
-wpn_dvl10:r:0
-wpn_remington700:r:0
-wpn_dvl10:r:0
-
-wpn_m4a1_siber:4:0
-wpn_m4a1_siber:0:0
-wpn_m4a1_siber:0:0
-wpn_m4_ru556:0:0
-wpn_m4_ru556:0:0
-
-wpn_ak5c_bas:0:0
-wpn_ak5c_bas:0:0
-wpn_ak5c_bas:0:0
-wpn_aug_modern:0:0
-wpn_aug_modern:0:0
-wpn_aug_modern:0:0
-wpn_aug_merc:0:0
-wpn_aug_merc:0:0
-wpn_aug_merc:0:0
-wpn_g36ka4_rwap:r:0:50
-wpn_g36ka4_rwap:r:0:50
-wpn_l85_m2:4:0
-wpn_l85_m2:4:0
-wpn_m4a1_siber:0:0
-wpn_m4_ru556:0:0
-wpn_sig550:0:0
-wpn_sig550:0:0
-wpn_sig552:0:0
-wpn_sig552:0:0
-
-wpn_p90gamma:r:3:35
-wpn_p90gamma:r:3
-wpn_p90gamma:r:3
-wpn_mp7:r:3:50
-wpn_ump45:r:0
+wpn_ump45:0:0
+wpn_ump45:0:0
 wpn_mp5:r:0
+wpn_mp5_nimble:r:0:70
+wpn_mp5sd_custom:r:0
 wpn_mp5sd_custom:r:0
 
-wpn_mp133:0:3
-wpn_mp153_m1:0:3
-wpn_mp153_m1:0:3
-wpn_spas12:0:3
-wpn_ithacam37_trench:0:3
-wpn_ithacam37_trench:0:3
-wpn_ithacam37_trench:0:3
+wpn_remington700:r:0
+wpn_remington700:r:0
+wpn_m4_ru556:4:6:3
+wpn_m4a1_siber:4:0
+wpn_l85_m2:4:0
+wpn_l85_m2:4:0
+wpn_l85_m2:4:0
 
-wpn_k98_mod:0:0
 wpn_winchester1873:0:0
+wpn_remington870:0:3
+wpn_remington870:0:3
+wpn_wincheaster1300:0:3
+wpn_ithacam37_trench:0:3:25
+wpn_ithacam37_trench:0:3:25
+
+[freedom_professional_secondary]
+
+wpn_sig226:r:0
+wpn_sig220_n:r:0
+wpn_sig220_n:r:0
+wpn_walther_p99:0:0
+wpn_beretta_modern:0:0
+wpn_fnp45:r:0:5
+wpn_fnp45:r:0:5
+
+[freedom_expert_primary]
+
+wpn_ump45:0:0
+wpn_ump45:0:0
+wpn_mp5:r:0
+wpn_p90gamma:r:3:35
+wpn_mp5_nimble:r:0:70
+wpn_mp5sd_custom:r:0
+
+wpn_remington700:r:0
+wpn_dvl10:r:0
+wpn_m4_ru556:4:6:3
+wpn_m4_ru556:4:6:3
+wpn_m4a1_siber:4:0
+wpn_m4a1_siber:4:0
+wpn_l85_m2:4:0
+wpn_l85_m2:4:0
+wpn_l85_m2:4:0
+wpn_l85_m2:4:0
+wpn_scar_siber:r:3:50
+
+wpn_winchester1873:0:0
+wpn_remington870:0:3
+wpn_remington870:0:3
+wpn_ithacam37_trench:0:3:25
+wpn_spas12:0:3
+
+[freedom_expert_secondary]
+
+wpn_sig226:r:0
+wpn_sig220_n:r:0
+wpn_sig220_n:r:0
+wpn_walther_p99:0:0
+wpn_fnp45:r:0:5
+wpn_fnp45:r:0:5
+wpn_fnp45:r:0:5
+wpn_pl15:0:0
+
+[freedom_veteran_primary]
+
+wpn_ump45:0:0
+wpn_ump45:0:0
+wpn_p90gamma:r:3:35
+wpn_mp5_nimble:r:0:70
+wpn_mp5sd_custom:r:0
+
+wpn_remington700_magpul_pro:r:0
+wpn_dvl10:r:0
+wpn_dvl10:r:0
+wpn_m4_ru556:4:6:3
+wpn_m4a1_siber:4:0
+wpn_m4a1_siber:4:0
+wpn_l85_m2:4:0
+wpn_l85_m2:4:0
+wpn_l85_m2:4:0
+wpn_scar_siber:r:3:50
+wpn_fal_sa58_osw:r:0
+
+wpn_winchester1873:0:0
+wpn_remington870:0:3
+wpn_remington870:0:3
+wpn_ithacam37_trench:0:3:25
+wpn_spas12:0:3
 
 [freedom_veteran_secondary]
-wpn_mp412:0:0
-wpn_mp412:0:0
-wpn_mp412:0:0
-wpn_sig226:r:0
-wpn_sig220_n:r:0
-wpn_glock:r:0
-wpn_glock_modern:r:0:25
-wpn_beretta_modern:r:0
-wpn_walther_p99:r:0
-wpn_walther_p99:0:0
-wpn_mp412:0:0
-wpn_colt1911_custom:0:0
-wpn_beretta_modern:0:0
-wpn_beretta_modern:0:0
-wpn_korth:0:0
-wpn_korth_custom:0:0
-wpn_mp443:0:0
-wpn_usp_match:0:0
-wpn_fnp45:0:0:50
-wpn_usp:0:0:50
-wpn_usp:0:0:50
-wpn_usp:0:0:50
 
+wpn_sig226:r:0
+wpn_walther_p99:0:0
+wpn_sig220_n:r:0
+wpn_fnp45:r:0:5
+wpn_pl15:0:0
 
 [freedom_master_primary]
-wpn_fn2000_nimble:r:6
-wpn_k98_mod:0:0
-wpn_saiga12s_isg:r:6:35
-wpn_saiga12s_isg:4:6:70
-wpn_l96a1m:r:0
-wpn_dvl10_m1:r:0:25
-wpn_ump45:r:3
-wpn_ump45:r:3
-wpn_mp5_nimble:r:0
-wpn_remington700_lapua700:0:0:25
-wpn_p90gamma:r:3:50
-wpn_steyr_scout_big:r:3
-wpn_steyr_scout_big:r:3
 
-wpn_vintorez_n1:r:3:50
+wpn_ump45:0:0
+wpn_ump45:0:0
+wpn_p90gamma:r:3:35
+wpn_p90gamma:r:3:35
+wpn_mp5_nimble:r:0:70
+wpn_mp5sd_custom:r:0
+
+wpn_remington700_magpul_pro:r:0
+wpn_dvl10:r:0
+wpn_dvl10:r:0
+wpn_m4_ru556:4:6:3
+wpn_m4a1_siber:4:0
+wpn_m4a1_siber:4:0
+wpn_l85_m2:4:0
+wpn_l85_m2:4:0
+wpn_l85_m2:4:0
 wpn_scar_siber:r:3:50
-wpn_scar_siber:r:3
-wpn_scar_siber:r:3
-wpn_fal_sa58_osw:r:3
-wpn_fal_sa58_osw:r:3
-wpn_dvl10:r:r
-wpn_remington700:r:r
-wpn_ace52:r:3
-wpn_ace52:r:3
-
-wpn_m4_ru556:4:6:25
-wpn_m4_ru556:4:6:45
-wpn_m4_ru556:4:6:45
+wpn_scar_siber:r:3:50
+wpn_fal_sa58_osw:r:0
 wpn_m249:4:6
-wpn_ak5c_isg:4:6
-wpn_ak5c_isg:4:6
 
-wpn_m4a1_siber:4:6
-wpn_m4a1_siber:0:6
-wpn_m4a1_siber:0:6
-wpn_m4_ru556:0:6
-wpn_m4_ru556:0:6
-
-wpn_ak5c_bas:0:6
-wpn_ak5c_bas:4:6
-wpn_ak5c_bas:0:6
-wpn_g36ka4_rwap:r:6
-wpn_g36ka4_rwap:r:6
-wpn_l85_m2:4:6
-wpn_m4a1_siber:0:6
-wpn_m4_ru556:r:6
-wpn_m4_ru556:r:6
-wpn_sig550:0:6
-wpn_sig552:0:6
-
-wpn_p90gamma:r:3
-wpn_mp7:r:3:65
-
-wpn_mp153_m1:r:6
-wpn_mp153_m1:r:6
-wpn_spas12:0:6
-wpn_ithacam37_trench:0:6
-wpn_ithacam37_trench:0:6
+wpn_winchester1873:0:0
+wpn_remington870:0:3
+wpn_remington870:0:3
+wpn_ithacam37_trench:0:3:25
+wpn_spas12:0:3
 
 [freedom_master_secondary]
+
 wpn_sig226:r:0
+wpn_walther_p99:0:0
 wpn_sig220_n:r:0
-wpn_glock:r:0
-wpn_glock_modern:r:0:25
-wpn_beretta_modern:r:0
-wpn_walther_p99:r:0
-wpn_walther_p99:r:0
-wpn_mp412:r:0
-wpn_colt1911_custom:r:0
-wpn_beretta_modern:r:0
-wpn_beretta_modern:r:0
-wpn_korth:r:0
-wpn_korth_custom:r:0
-wpn_mp443:r:0
-wpn_usp_match:r:0
-wpn_fnp45:r:0
-wpn_usp:r:0
-wpn_usp:r:0
-wpn_usp:r:0
-wpn_fn57:r:0
+wpn_sig220_n:r:0
+wpn_fnp45:r:0:5
+wpn_fnp45:r:0:5
+wpn_pl15:0:0
+wpn_pl15:0:0
+
+[freedom_legend_primary]
+
+wpn_ump45:0:0
+wpn_ump45:0:0
+wpn_p90gamma:r:3:35
+wpn_p90gamma:r:3:35
+wpn_mp5_nimble:r:0:70
+wpn_mp5sd_custom:r:0
+
+wpn_remington700_lapua700:0:0:25
+wpn_dvl10:r:0
+wpn_dvl10:r:0
+wpn_m4a1_siber:4:0
+wpn_l85_m2:4:0
+wpn_l85_m2:4:0
+wpn_scar_siber:r:3:50
+wpn_scar_siber:r:3:50
+wpn_fal_sa58_osw:r:0
+wpn_fal_sa58_osw:r:0
+wpn_m249:4:6
+
+wpn_winchester1873:0:0
+wpn_remington870:0:3
+wpn_remington870:0:3
+wpn_ithacam37_trench:0:3:25
+wpn_spas12:0:3
+wpn_saiga12s_isg:4:6:70
+
+[freedom_legend_secondary]
+
+wpn_sig226:r:0
+wpn_walther_p99:0:0
+wpn_sig220_n:r:0
+wpn_sig220_n:r:0
+wpn_fnp45:r:0:5
+wpn_fnp45:r:0:5
+wpn_pl15:0:0
+wpn_pl15:0:0
