--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_stalker.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_stalker.ltx
@@ -452,10 +452,20 @@ wpn_mp412:r:0
 
 [extras_novice]
 
+[extras_trainee]
+
 [extras_experienced]
+
+[extras_professional]
 
 [extras_veteran]
 grenade_rgd5:0:1:2
 
+[extras_expert]
+grenade_rgd5:0:1:2
+
 [extras_master]
+grenade_rgd5:0:1:2
+
+[extras_legend]
 grenade_rgd5:0:1:2
