--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_stalker.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_stalker.ltx
@@ -1,151 +1,155 @@
-
+; Done 9/1/24 - [Ted]
 [stalker]
 extra  =  extras_basic
 
 [stalker_novice]:stalker
-primary  =  novice_primary
-; secondary  =  experienced_secondary
+primary  =  loner_novice_primary
+secondary  =  loner_novice_secondary
 extra  =  extras_novice
 
-[stalker_trainee]:stalker_novice
+[stalker_trainee]:stalker
+primary = loner_trainee_primary
+secondary = loner_trainee_secondary
+extra = extras_trainee
 
 [stalker_experienced]:stalker
-primary  =  experienced_primary
-secondary  =  experienced_secondary
+primary  =  loner_experienced_primary
+secondary  =  loner_experienced_secondary
 extra  =  extras_experienced
 
-[stalker_professional]:stalker_experienced
-primary  =  stalker_professional_primary
-secondary  =  stalker_professional_secondary
+[stalker_professional]:stalker
+primary  =  loner_professional_primary
+secondary  =  loner_professional_secondary
 
 [stalker_veteran]:stalker
-primary  =  veteran_primary
-secondary  =  veteran_secondary
+primary  =  loner_veteran_primary
+secondary  =  loner_veteran_secondary
 extra  =  extras_veteran
 
 [stalker_expert]:stalker_veteran
-primary  =  stalker_expert_primary
-secondary  =  stalker_expert_secondary
+primary  =  loner_expert_primary
+secondary  =  loner_expert_secondary
 
 [stalker_master]:stalker
-primary  =  master_primary
-secondary  =  master_secondary
+primary  =  loner_master_primary
+secondary  =  loner_master_secondary
 extra  =  extras_master
 
-[stalker_legend]:stalker_master
+[stalker_legend]:stalker
+primary = loner_legend_primary
+secondary = loner_legend_secondary
+extra = extras_legend
 
 ;----------------------------------------------------
-[novice_primary]
-wpn_mp443:0:0
-wpn_aps:0:0
-wpn_oc33:0:0
-wpn_pl15:0:0
-wpn_gsh18:0:0
-wpn_gsh18:0:0
-wpn_pb_custom:0
-wpn_pb_custom:0:0
-wpn_pm_custom:0
-wpn_pm_custom:0:0
-wpn_pm_custom:0:0
-wpn_tt33_modern:0:0
-wpn_tt33_modern:0:0
-wpn_colt1911:0:0
-wpn_fn57:0:0
 
+[loner_novice_primary]
+
+wpn_wincheaster1300:0:3
 wpn_bizon:0:0
+wpn_bizon:0:0
+wpn_bizon:0:0
+wpn_sks_b:r:0
+
+wpn_kiparis:0:0
+wpn_kiparis:0:0
 wpn_kiparis:0:0
 wpn_vityaz:0:0
-
-wpn_bm16:0:3
-wpn_toz34_obrez:0:3
-wpn_bm16_full:0:3
-wpn_toz34:0:3
-wpn_toz34:0:3
-wpn_toz106_m1:0:0
-wpn_toz106_m1:0:0
-wpn_mp133:0:3
-wpn_wincheaster1300:0:3
-wpn_remington870:0:3
-wpn_protecta:0:3
-wpn_protecta_aim:0:3
-wpn_ithacam37_stakeout:0:3
-
+wpn_vityaz:0:0
+wpn_vityaz:0:0
 wpn_ppsh41:0:3
 wpn_ppsh41:0:3
-wpn_ppsh41:0:3
-
-wpn_sks_b:r:0
-wpn_mosin:r:0
-wpn_svd_m1:0
-wpn_winchester1873:0:0
 
 wpn_adar2_15:0:0
+wpn_mosin:r:0
 
-[experienced_primary]
+wpn_bm16:0:3
+wpn_bm16:0:3
+wpn_toz34_obrez:0:3
+wpn_toz34_obrez:0:3
+wpn_toz106_m1:0:0
+wpn_toz106_m1:0:0
+wpn_protecta:0:3
+wpn_protecta:0:3
+wpn_protecta_aim:0:3
 
+[loner_novice_secondary]
+
+wpn_pb_custom:0
+wpn_pb_custom:0:0
+wpn_pm_custom:0
+wpn_pm_custom:0:0
+wpn_pm_custom:0:0
+wpn_tt33_modern:0:0
+wpn_tt33_modern:0:0
+
+[loner_trainee_primary]
+
+wpn_kiparis:0:0
+wpn_kiparis:0:0
+wpn_kiparis:0:0
+wpn_vityaz:0:0
+wpn_vityaz:0:0
+wpn_vityaz:0:0
+wpn_ppsh41:0:3
+wpn_ppsh41:0:3
+wpn_bizon:0:0
+
+wpn_adar2_15:0:0
+wpn_mosin:r:0
+
+wpn_bm16_full:0:3
+wpn_bm16:0:3
+wpn_bm16:0:3
+wpn_toz34:0:3
+wpn_toz34_obrez:0:3
+wpn_toz34_obrez:0:3
+wpn_toz106_m1:0:0
+wpn_toz106_m1:0:0
+wpn_protecta:0:3
+wpn_protecta:0:3
+wpn_protecta_aim:0:3
+
+[loner_trainee_secondary]
+
+wpn_pb_custom:0
+wpn_pb_custom:0:0
+wpn_pm_custom:0
+wpn_pm_custom:0:0
+wpn_pm_custom:0:0
+wpn_tt33_modern:0:0
+wpn_tt33_modern:0:0
+
+[loner_experienced_primary]
+
+wpn_kiparis:0:0
+wpn_kiparis:0:0
+wpn_vityaz:0:0
+wpn_vityaz:0:0
+wpn_ppsh41:0:3
+wpn_ppsh41:0:3
+wpn_bizon:0:0
+
+wpn_adar2_15:0:0
+wpn_mosin:r:0
+wpn_sks_b:r:0
+wpn_sks_b:0:0
 wpn_ak74u_n1:r:0
-wpn_ak74m_n:r:0
-wpn_ak74_n:r:0
+wpn_ak74u_n1:r:0
 
-wpn_kiparis:r:0
-wpn_kiparis:0:0
-wpn_vz61:r:0
-wpn_vz61:0:0
-
-wpn_bm16:0:3
-wpn_toz34_obrez:0:3
 wpn_bm16_full:0:3
+wpn_bm16_full:0:3
+wpn_bm16:0:3
 wpn_toz34:0:3
-wpn_toz34:0:3
+wpn_toz34_obrez:0:3
+wpn_toz34_obrez:0:3
 wpn_toz106_m1:0:0
 wpn_toz106_m1:0:0
-wpn_mp133:0:3
-wpn_wincheaster1300:0:3
-wpn_remington870:0:3
 wpn_protecta:0:3
 wpn_protecta_aim:0:3
-wpn_ithacam37_stakeout:0:3
-
-wpn_kiparis:r:0
-wpn_kiparis:0:0
-wpn_vz61:r:0
-wpn_vz61:0:0
-
-wpn_bm16:0:3
-wpn_toz34_obrez:0:3
-wpn_bm16_full:0:3
-wpn_toz34:0:3
-wpn_toz34:0:3
-wpn_toz106_m1:0:0
-wpn_toz106_m1:0:0
-wpn_mp133:0:3
 wpn_wincheaster1300:0:3
-wpn_remington870:0:3
-wpn_protecta:0:3
-wpn_protecta_aim:0:3
 
-wpn_ppsh41:0:3
-wpn_ppsh41:0:3
-wpn_ppsh41:0:3
+[loner_experienced_secondary]
 
-wpn_sks_b:r:0
-
-wpn_mosin:r:0
-wpn_svd_m1:0
-wpn_sv98:r:0
-wpn_winchester1873:0:0
-
-wpn_adar2_15:0:0
-wpn_adar2_15:r:0
-
-[experienced_secondary]
-wpn_mp412:0:0
-wpn_mp443:0:0
-wpn_aps:0:0
-wpn_oc33:0:0
-wpn_pl15:0:0
-wpn_gsh18:0:0
-wpn_gsh18:0:0
 wpn_pb_custom:0
 wpn_pb_custom:0:0
 wpn_pm_custom:0
@@ -154,299 +158,245 @@ wpn_pm_custom:0:0
 wpn_tt33_modern:0:0
 wpn_tt33_modern:0:0
 wpn_colt1911:0:0
-wpn_fn57:0:0
+wpn_aps:0:0
 
-[stalker_professional_primary]
-wpn_ak74u_tac:r:0
+[loner_professional_primary]
+
+wpn_kiparis:0:0
+wpn_vityaz:0:0
+wpn_ppsh41:0:3
+wpn_ppsh41:0:3
+wpn_bizon:0:0
+wpn_bizon:0:0
+
+wpn_adar2_15:0:0
+wpn_sks_b:r:0
+wpn_sks_b:0:0
+wpn_mosin:r:0
+wpn_sv98:r:0
 wpn_ak74u_n1:r:0
-wpn_ak74u_n1:0:0
+wpn_ak74u_n1:r:0
+wpn_ak74_n:r:0
+wpn_akm_bas:r:0
+
+wpn_bm16_full:0:3
+wpn_bm16_full:0:3
+wpn_bm16:0:3
+wpn_toz34:0:3
+wpn_toz34:0:3
+wpn_toz34_obrez:0:3
+wpn_toz106_m1:0:0
+wpn_mp133:0:3
+wpn_ithacam37_trench:0:3:50
+wpn_wincheaster1300:0:3
+
+[loner_professional_secondary]
+
+wpn_pb_custom:0
+wpn_pb_custom:0
+wpn_pm_custom:0:0
+wpn_pm_custom:0:0
+wpn_tt33_modern:0:0
+wpn_tt33_modern:0:0
+wpn_colt1911:0:0
+wpn_colt1911:0:0
+wpn_mp443:0:0
+wpn_mp443:0:0
+wpn_aps:0:0
+wpn_aps:0:0
+wpn_bm16:0:3
+wpn_toz34_obrez:0:3
+
+[loner_veteran_primary]
+
+wpn_vityaz:0:0
+wpn_ppsh41:0:3
+wpn_ppsh41:0:3
+wpn_bizon:0:0
+wpn_bizon:0:0
+
+wpn_sks_molot:r:0
+wpn_adar2_15:0:0
+wpn_mosin:r:0
+wpn_sv98:r:0
 wpn_ak74m_n:r:0
 wpn_ak74m_n:0:0
 wpn_ak74_n:r:0
 wpn_ak74_n:0:0
+wpn_ak74u_tac:r:0
+wpn_ak74u_n1:r:0
+wpn_akm_bas:r:0
 
-wpn_kiparis:r:0
-wpn_kiparis:0:0
-wpn_vz61:r:0
-wpn_vz61:0:0
-
+wpn_bm16_full:0:3
+wpn_bm16_full:0:3
+wpn_toz34:0:3
+wpn_toz34:0:3
 wpn_mp133:0:3
-wpn_mp153_m1:0:3
-wpn_mp153_m1:0:3
-wpn_saiga12s_m2:0:3
-wpn_wincheaster1300:0:3
-wpn_remington870:0:3
-wpn_protecta:0:3
-wpn_protecta_aim:0:3
 wpn_ithacam37_trench:0:3:50
-wpn_ithacam37_trench:0:3
+wpn_mp153_m1:0:3
+wpn_wincheaster1300:0:3
 
-wpn_sks_molot:r:0
-wpn_sks_b:r:0
-wpn_sks_b:0:0
-wpn_akm_bas:r:0
-wpn_akm_bas:r:0
+[loner_veteran_secondary]
 
-wpn_mosin:r:0
-wpn_mosin:0:0
-wpn_svd_m1:0
-wpn_svd_m1:0
-wpn_sv98:r:0
-wpn_sv98:0:0
-wpn_winchester1873:0:0
-
-wpn_adar2_15:0:0
-wpn_adar2_15:r:0
-
-[stalker_professional_secondary]
-wpn_mp412:0:0
-wpn_mp443:0:0
-wpn_aps:0:0
-wpn_oc33:0:0
-wpn_pl15:0:0
-wpn_gsh18:0:0
-wpn_gsh18:0:0
 wpn_pb_custom:0
-wpn_pb_custom:0:0
-wpn_pm_custom:0
 wpn_pm_custom:0:0
-wpn_pm_custom:0:0
-wpn_tt33_modern:0:0
 wpn_tt33_modern:0:0
 wpn_colt1911:0:0
-wpn_fn57:0:0
+wpn_colt1911:0:0
+wpn_mp443:0:0
+wpn_mp443:0:0
+wpn_aps:0:0
+wpn_aps:0:0
+wpn_bm16:0:3
+wpn_toz34_obrez:0:3
+wpn_oc33:0:0
+wpn_sr1m:0:0
 
-[veteran_primary]
-wpn_ash12:r:0
-wpn_ks23:r:3
+[loner_expert_primary]
 
+wpn_vityaz:0:0
+wpn_ppsh41:0:3
+wpn_ppsh41:0:3
+wpn_bizon:0:0
+wpn_bizon:0:0
+
+wpn_svd_m1:0
+wpn_sv98:r:0
+wpn_svd_m1:r:0
+
+wpn_sks_molot:r:0
+wpn_adar2_15:0:0
+wpn_ak74m_n:r:0
+wpn_ak74m_n:0:0
+wpn_ak74_n:r:0
+wpn_ak74_n:0:0
+wpn_ak74u_tac:r:0
+wpn_ak74u_n1:r:0
+wpn_akm_bas:r:0
 wpn_ak12_m1:r:0
-wpn_abakan_n:r:0:25
-wpn_ak105:r:0
-wpn_abakan_n:r:0
-wpn_ak74u_tac:r:0
-wpn_ak74u_n1:r:0
-wpn_ak74u_n1:0:0
-wpn_ak74m_n:r:0
-wpn_ak74m_n:0:0
-wpn_ak74_n:r:0
-wpn_ak74_n:0:0
 
-wpn_bizon:r:0
-wpn_bizon:0:0
-wpn_vityaz:r:0
-wpn_vityaz:0:0
-
-wpn_mp133:0:3
-wpn_mp153_m1:0:3
-wpn_mp153_m1:0:3
-wpn_saiga12s_m2:0:3
-wpn_wincheaster1300:0:3
-wpn_remington870:0:3
-wpn_protecta:0:3
-wpn_protecta_aim:0:3
-wpn_ithacam37_trench:0:3:50
-
-wpn_sks_molot:r:0
-wpn_sks_b:r:0
-wpn_sks_b:0:0
-wpn_akm_bas:r:0
-wpn_akm_bas:0:0
-wpn_akm_bas:r:0
-wpn_akm_bas:0:0
 wpn_rpk:r:0
-wpn_rpk:0:0
-
-wpn_mosin:r:0
-wpn_mosin:0:0
-wpn_svd_m1:0
-wpn_svd_m1:0
-wpn_sv98:r:0
-wpn_sv98:0:0
-
-wpn_toz34_mark4_23:0:0
-
-wpn_adar2_15:0:0
-wpn_adar2_15:r:0
-
-[veteran_secondary]
-wpn_mp412:0:0
-wpn_mp443:0:0
-wpn_aps:0:0
-wpn_oc33:0:0
-wpn_pl15:0:0
-wpn_gsh18:0:0
-wpn_gsh18:0:0
-wpn_pb_custom:0
-wpn_pb_custom:0:0
-wpn_pm_custom:0
-wpn_pm_custom:0:0
-wpn_pm_custom:0:0
-wpn_tt33_modern:0:0
-wpn_tt33_modern:0:0
-wpn_colt1911:0:0
-wpn_fn57:0:0
-
-[stalker_expert_primary]
-wpn_ash12:r:0
-wpn_ks23:r:3
-
-wpn_ak12_m1:r:0
-wpn_abakan_n:r:0:25
-wpn_ak105:r:0
-wpn_abakan_n:r:0
-wpn_ak74u_tac:r:0
-wpn_ak74u_n1:r:0
-wpn_ak74u_n1:0:0
-wpn_ak74m_n:r:0
-wpn_ak74m_n:0:0
-wpn_ak74_n:r:0
-wpn_ak74_n:0:0
-
-wpn_bizon:r:0
-wpn_bizon:0:0
-wpn_vityaz:r:0
-wpn_vityaz:0:0
-
-wpn_mp133:0:3
-wpn_mp153_m1:0:3
-wpn_mp153_m1:0:3
-wpn_saiga12s_m2:0:3
-wpn_saiga12s_m2:0:3
-wpn_wincheaster1300:0:3
-wpn_remington870:0:3
-wpn_protecta:0:3
-wpn_protecta_aim:0:3
-wpn_ithacam37_trench:0:3:50
-
-wpn_sks_molot:r:0
-wpn_sks_b:r:0
-wpn_sks_b:0:0
-wpn_akm_bas:r:0
-wpn_akm_bas:0:0
-wpn_akm_bas:r:0
-wpn_akm_bas:0:0
-wpn_rpk:r:0
-wpn_rpk:0:0
-wpn_ak103:r:0
-wpn_ak103:0:0
-wpn_sks_tac:r:0
-wpn_rpk:r:0
-
-wpn_mosin:r:0
-wpn_mosin:0:0
-wpn_svds:0
-wpn_svds:0
-wpn_sv98:r:0
-wpn_sv98:0:0
 
 wpn_vintorez_n1:r:0
 wpn_9a91:r:0
 
+wpn_bm16_full:0:3
+wpn_toz34:0:3
+wpn_mp133:0:3
+wpn_ithacam37_trench:0:3:50
+wpn_mp153_m1:0:3
+wpn_wincheaster1300:0:3
 wpn_toz34_mark4_23:0:0
 
-wpn_adar2_15:0:0
-wpn_adar2_15:r:0
+[loner_expert_secondary]
 
-[stalker_expert_secondary]
-wpn_mp412:0:0
+wpn_colt1911:0:0
 wpn_mp443:0:0
 wpn_aps:0:0
+wpn_bm16:0:3
+wpn_toz34_obrez:0:3
 wpn_oc33:0:0
-wpn_pl15:0:0
-wpn_gsh18:0:0
-wpn_gsh18:0:0
-wpn_colt1911:0:0
-wpn_fn57:0:0
+wpn_sr1m:0:0
 
-[master_primary]
-wpn_saiga12s_isg:r:6:5
-wpn_ump45:r:3
-wpn_mp5_nimble:r:0
-wpn_remington700_magpul_pro:0:3
-wpn_ash12:r:3
+[loner_master_primary]
+
+wpn_vityaz:0:0
+wpn_ppsh41:0:3
+wpn_bizon:0:0
+
+wpn_sv98:r:0
+wpn_svd_m1:r:0
+wpn_svd_m1:r:0
+wpn_svd_m1:r:0
+wpn_svds:r:3
+
+wpn_sks_molot:r:0
+wpn_m4a1_siber:0:0
+wpn_ak74_pmc:r:0
+wpn_ak74m_n:r:0
+wpn_ak74m_n:r:0
+wpn_ak74u_tac:r:0
+wpn_ak74u_tac:r:0
+wpn_ak103:r:3
+wpn_ak103:r:3
+wpn_ak104_alfa:r:3
+wpn_ak12_m1:r:0
+
+wpn_rpk:r:0
+
+wpn_vintorez_n1:r:0
+wpn_vintorez_n1:r:0
+wpn_9a91:r:0
+
+wpn_mp133:0:3
+wpn_ithacam37_trench:0:3:50
+wpn_ithacam37_trench:0:3:50
+wpn_mp153_m1:0:3
+wpn_toz34_mark4_23:0:0
 wpn_ks23:r:3
 
-wpn_ak74_n:r:6
-wpn_ak12_m1:r:6
-wpn_ak74m_n:r:6
-wpn_ak12_m1:r:6
-wpn_abakan_n:r:6
-wpn_ak105:r:6
-wpn_abakan_n:r:6
-wpn_ak74u_tac:r:6
-wpn_ak74u_n1:r:6
-wpn_ak74u_n1:0:6
-wpn_ak74m_n:r:6
-wpn_ak74m_n:0:6
-wpn_ak74_n:r:6
-wpn_ak74_n:0:6
+[loner_master_secondary]
 
-wpn_bizon:r:6
-wpn_bizon:0:6
-wpn_vityaz:r:6
-wpn_vityaz:0:6
-wpn_pp2000:r:0
-wpn_pp2000:r:0
-
-wpn_mp153_m1:0:6
-wpn_mp153_m1:0:6
-wpn_saiga12s_m2:0:6
-wpn_saiga12s_m2:0:6
-wpn_saiga12s_isg:0:6
-wpn_spas12:0:6:25
-wpn_protecta:0:6
-wpn_protecta_aim:0:6
-wpn_ithacam37_trench:0:6
-
-wpn_sks_molot:r:3
-wpn_sks_b:r:3
-wpn_sks_b:0:3
-wpn_akm_bas:r:3
-wpn_akm_bas:0:3
-wpn_akm_bas:r:3
-wpn_akm_bas:0:3
-wpn_rpk:r:3
-wpn_rpk:0:3
-wpn_ak103:r:3
-wpn_ak103:0:3
-wpn_sks_tac:r:3
-wpn_rpk:r:3
-wpn_akm_alfa:r:3
-wpn_ak103:r:3
-
-wpn_svds:3
-wpn_svds:3
-wpn_sv98:r:3
-wpn_sv98:0:3
-wpn_svds:3
-wpn_svds:r:3
-wpn_svds_pmc:r:3
-
-
-wpn_val:r:3
-wpn_val:r:3
-wpn_vintorez_n1:r:3
-wpn_groza:r:3
-wpn_9a91:r:3
-wpn_vihr:r:3
-
-wpn_pkm_siber:0:0
-
-
-[master_secondary]
-wpn_mp412:0:0
-wpn_mp443:r:0
-wpn_aps:r:0
-wpn_oc33:r:0
-wpn_pl15:r:0
-wpn_gsh18:r:0
-wpn_gsh18:r:0
-wpn_colt1911:r:0
-wpn_fn57:r:0
-wpn_korth:r:0
-wpn_korth_custom:r:0
+wpn_colt1911_camo:0:0
+wpn_colt1911_camo:0:0
+wpn_mp443:0:0
+wpn_mp443:0:0
+wpn_toz34_obrez:0:3
+wpn_oc33:0:0
+wpn_sr1m:0:0
+wpn_sr1m:0:0
 wpn_mp412:r:0
+
+[loner_legend_primary]
+
+wpn_sv98:r:0
+wpn_svd_m1:r:0
+wpn_svd_m1:r:0
+wpn_svds:r:3
+wpn_svds:r:3
+
+wpn_sks_molot:r:0
+wpn_m4a1_siber:0:0
+wpn_ak74_pmc:r:0
+wpn_ak74_pmc:r:0
+wpn_ak74_pmc:r:0
+wpn_ak74u_tac:r:0
+wpn_ak103:r:3
+wpn_ak103:r:3
+wpn_ak104_alfa:r:3
+wpn_ak104_alfa:r:3
+wpn_ak12_m1:r:0
+
+wpn_rpk:r:0
+
+wpn_vintorez_n1:r:0
+wpn_vintorez_n1:r:0
+wpn_vintorez_n1:r:0
+wpn_9a91:r:0
+wpn_9a91:r:0
+wpn_val:r:3
+wpn_val:r:3
+
+wpn_ithacam37_trench:0:3:50
+wpn_ithacam37_trench:0:3:50
+wpn_mp153_m1:0:3
+wpn_mp153_m1:0:3
+wpn_toz34_mark4_23:0:0
+wpn_ks23:r:3
+wpn_ks23:r:3
+
+[loner_legend_secondary]
+
+wpn_colt1911_camo:0:0
+wpn_colt1911_camo:0:0
+wpn_mp443:0:0
+wpn_toz34_obrez:0:3
+wpn_oc33:0:0
+wpn_sr1m:0:0
+wpn_sr1m:0:0
+wpn_mp412:r:0
+
+;----------------------------------------------------
 
 [extras_basic]
 
